tests/compile_fail/declare_scheduler_invisible_name.stderr
error: declare_scheduler!: `name` must contain at least one visible character (empty, whitespace-only, and invisible-only literals are rejected)
 --> tests/compile_fail/declare_scheduler_invisible_name.rs:9:12
  |
9 |     name = "\u{200B}\u{FEFF}",
  |            ^^^^^^^^^^^^^^^^^^
